[gd_scene load_steps=5 format=3 uid="uid://ujakq7hjv2n8"]

[ext_resource type="Script" path="res://death_menu.gd" id="1_saj0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oya8h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myext"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5fm6"]

[node name="death_menu" type="Node2D"]
script = ExtResource("1_saj0e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12931.0
offset_top = -8171.0
offset_right = -12428.0
offset_bottom = -7873.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(50, 50)
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 229.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Your wandering is not over yet. Whether you begin again or give in to defeat is entirely up to you.[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="respawn" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_oya8h")
text = "Respawn"

[node name="to_menu" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_myext")
text = "Exit To Menu"

[node name="exit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_l5fm6")
text = "Exit Game"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/to_menu" to="." method="_on_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
